Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.7.1 (unreleased) [alpha]

** Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** build: Added MinGW build script for Windows binaries, windows/gsasl4win.mk.

** doc: Typo fix in autoconf snippet.

** i18n: Updated translations.

** examples: Added client-xmpp-saml20 and server-xmpp-saml20.

* Version 1.7.0 (released 2010-10-22) [alpha]

** Support for SAML20 mechanism as per -01 IETF draft.  See lib/NEWS.
Implements draft-ietf-kitten-sasl-saml-01.

** doc: Mention new SAML properties.

** tests: New tests/saml20.c file.

* Version 1.6.1 (released 2011-05-01) [stable]

** build: Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** doc: Typo fix in autoconf snippet.

** i18n: Updated translations.

* Version 1.6.0 (released 2010-12-14) [beta]

** No changes since release candidate 1.5.5.

* Version 1.5.5 (released 2010-12-09) [beta]

** gsasl: Add --no-cb to disable use of TLS channel bindings.

** build: Use silent build rules via automake.
Use 'make V=99' to see the command lines used.

* Version 1.5.4 (released 2010-11-14) [beta]

** Update gnulib files.

* Version 1.5.3 (released 2010-11-14) [beta]

** gsasl: Support for TLS channel bindings.
Requires GnuTLS 2.11.4 or later for the gnutls_session_channel_binding
function.  Used by the SCRAM-SHA-1-PLUS mechanism.
