@@ -88,7 +88,11 @@ examples/client-mech
 examples/client-mech.o
 examples/client-serverfirst
 examples/client-serverfirst.o
+examples/client-xmpp-saml20
+examples/client-xmpp-saml20.o
 examples/client.o
+examples/server-xmpp-saml20
+examples/server-xmpp-saml20.o
 gl/.deps/
 gl/.libs/
 gl/Makefile
@@ -111,6 +115,8 @@ gl/close-hook.o
 gl/configmake.h
 gl/exitfail.lo
 gl/exitfail.o
+gl/fclose.lo
+gl/fclose.o
 gl/fd-hook.lo
 gl/fd-hook.o
 gl/fflush.lo
@@ -119,6 +125,8 @@ gl/fpurge.lo
 gl/fpurge.o
 gl/freading.lo
 gl/freading.o
+gl/fseek.lo
+gl/fseek.o
 gl/fseeko.lo
 gl/fseeko.o
 gl/iconv.h
@@ -150,11 +158,25 @@ gl/sockets.lo
 gl/sockets.o
 gl/stdio.h
 gl/stdlib.h
+gl/strerror.lo
+gl/strerror.o
 gl/striconv.lo
 gl/striconv.o
 gl/string.h
 gl/sys/
 gl/unistd.h
+gl/unistr.h
+gl/unistr/.deps/
+gl/unistr/.dirstamp
+gl/unistr/.libs/
+gl/unistr/u8-mbtoucr.lo
+gl/unistr/u8-mbtoucr.o
+gl/unistr/u8-uctomb-aux.lo
+gl/unistr/u8-uctomb-aux.o
+gl/unistr/u8-uctomb.lo
+gl/unistr/u8-uctomb.o
+gl/unitypes.h
+gl/unused-parameter.h
 gl/vasnprintf.lo
 gl/vasnprintf.o
 gl/version-etc.lo
@@ -177,11 +199,14 @@ gltests/glthread/.dirstamp
 gltests/glthread/lock.o
 gltests/glthread/thread.o
 gltests/glthread/threadlib.o
+gltests/inttypes.h
 gltests/ioctl.o
 gltests/libtests.a
 gltests/locale.h
 gltests/localename.o
 gltests/malloca.o
+gltests/perror.o
+gltests/strerror_r.o
 gltests/sys/
 gltests/test-alignof
 gltests/test-alignof.o
@@ -205,16 +230,22 @@ gltests/test-environ
 gltests/test-environ.o
 gltests/test-errno
 gltests/test-errno.o
+gltests/test-fclose
+gltests/test-fclose.o
 gltests/test-fcntl-h
 gltests/test-fcntl-h.o
 gltests/test-fflush
 gltests/test-fflush.o
 gltests/test-fflush2
 gltests/test-fflush2.o
+gltests/test-float
+gltests/test-float.o
 gltests/test-fpurge
 gltests/test-fpurge.o
 gltests/test-freading
 gltests/test-freading.o
+gltests/test-fseek
+gltests/test-fseek.o
 gltests/test-fseeko
 gltests/test-fseeko.o
 gltests/test-ftell
@@ -227,6 +258,8 @@ gltests/test-ftello3
 gltests/test-ftello3.o
 gltests/test-getaddrinfo
 gltests/test-getaddrinfo.o
+gltests/test-getcwd-lgpl
+gltests/test-getcwd-lgpl.o
 gltests/test-getdelim
 gltests/test-getdelim.o
 gltests/test-getline
@@ -245,6 +278,10 @@ gltests/test-inet_ntop
 gltests/test-inet_ntop.o
 gltests/test-inet_pton
 gltests/test-inet_pton.o
+gltests/test-intprops
+gltests/test-intprops.o
+gltests/test-inttypes
+gltests/test-inttypes.o
 gltests/test-locale
 gltests/test-locale.o
 gltests/test-localename
@@ -273,6 +310,8 @@ gltests/test-open
 gltests/test-open.o
 gltests/test-perror
 gltests/test-perror.o
+gltests/test-perror2
+gltests/test-perror2.o
 gltests/test-pipe
 gltests/test-pipe.o
 gltests/test-poll
@@ -313,6 +352,8 @@ gltests/test-stdlib
 gltests/test-stdlib.o
 gltests/test-strerror
 gltests/test-strerror.o
+gltests/test-strerror_r
+gltests/test-strerror_r.o
 gltests/test-striconv
 gltests/test-striconv.o
 gltests/test-string
@@ -335,6 +376,8 @@ gltests/test-sys_wait
 gltests/test-sys_wait.o
 gltests/test-time
 gltests/test-time.o
+gltests/test-u8-mbtoucr
+gltests/test-u8-uctomb
 gltests/test-unistd
 gltests/test-unistd.o
 gltests/test-unsetenv
@@ -359,6 +402,11 @@ gltests/test-wctype.o
 gltests/test-xalloc-die
 gltests/test-xalloc-die.o
 gltests/time.h
+gltests/unistr/.deps/
+gltests/unistr/.dirstamp
+gltests/unistr/test-u8-mbtoucr.o
+gltests/unistr/test-u8-uctomb.o
+gltests/unused-parameter.h
 gltests/version-etc-fsf.o
 gltests/warn-on-use.h
 gsasl-*.tar.gz
@@ -379,6 +427,7 @@ lib/anonymous/mechinfo.o
 lib/anonymous/server.lo
 lib/anonymous/server.o
 lib/autom4te.cache/
+lib/build-aux/compile
 lib/build-aux/config.guess
 lib/build-aux/config.sub
 lib/build-aux/depcomp
@@ -492,6 +541,7 @@ lib/gltests/Makefile.in
 lib/gltests/arg-nonnull.h
 lib/gltests/c++defs.h
 lib/gltests/dummy.o
+lib/gltests/inttypes.h
 lib/gltests/libtests.a
 lib/gltests/test-alloca-opt
 lib/gltests/test-alloca-opt.o
@@ -501,6 +551,8 @@ lib/gltests/test-c-ctype
 lib/gltests/test-c-ctype.o
 lib/gltests/test-errno
 lib/gltests/test-errno.o
+lib/gltests/test-float
+lib/gltests/test-float.o
 lib/gltests/test-gc
 lib/gltests/test-gc-hmac-md5
 lib/gltests/test-gc-hmac-md5.o
@@ -517,6 +569,10 @@ lib/gltests/test-getdelim
 lib/gltests/test-getdelim.o
 lib/gltests/test-getline
 lib/gltests/test-getline.o
+lib/gltests/test-intprops
+lib/gltests/test-intprops.o
+lib/gltests/test-inttypes
+lib/gltests/test-inttypes.o
 lib/gltests/test-memchr
 lib/gltests/test-memchr.o
 lib/gltests/test-memmem
@@ -636,6 +692,15 @@ lib/ntlm/mechinfo.lo
 lib/ntlm/mechinfo.o
 lib/ntlm/ntlm.lo
 lib/ntlm/ntlm.o
+lib/openid20/.deps/
+lib/openid20/.libs/
+lib/openid20/client.lo
+lib/openid20/client.o
+lib/openid20/libgsasl-openid20.la
+lib/openid20/mechinfo.lo
+lib/openid20/mechinfo.o
+lib/openid20/server.lo
+lib/openid20/server.o
 lib/plain/.deps/
 lib/plain/.libs/
 lib/plain/Makefile
