@@ -23,7 +23,7 @@ library includes support for the framework (with authentication
 functions and application data privacy and integrity functions) and at
 least partial support for the ANONYMOUS, CRAM-MD5, DIGEST-MD5,
 EXTERNAL, GS2-KRB5, GSSAPI, LOGIN, NTLM, PLAIN, SCRAM-SHA-1,
-SCRAM-SHA-1-PLUS, and SECURID mechanisms.
+SCRAM-SHA-1-PLUS, SAML20, OPENID20, and SECURID mechanisms.
     </para>
 
     <para>
