@@ -1,4 +1,4 @@
-# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
+# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Simon Josefsson
 #
 # This file is part of GNU SASL Library.
 #
@@ -64,6 +64,10 @@ endif
 
 if SAML20
 SUBDIRS += saml20
+endif
+
+if OPENID20
+SUBDIRS += openid20
 endif
 
 if NTLM
