@@ -203,7 +203,9 @@ static struct
   ERR (GSASL_NO_SAML20_IDP_IDENTIFIER,
        N_("Callback failed to provide SAML20 user identifier.")),
   ERR (GSASL_NO_SAML20_REDIRECT_URL,
-       N_("Callback failed to provide SAML20 redirect URL."))
+       N_("Callback failed to provide SAML20 redirect URL.")),
+  ERR (GSASL_NO_OPENID20_AUTH_IDENTIFIER,
+       N_("Callback failed to provide OPENID20 authentication identifier."))
 };
 /* *INDENT-ON* */
 
